# datagen

./: Cargo.toml  Dockerfile  README.md  shipyard.sh
src/: args.rs  cli.rs  fns.rs  main.rs
src/cli/: args.rs  commands.rs  fns.rs
