[package]
name = "datagen"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
polars = { version = "0.36.2", features = ["lazy", "parquet", "dtype-datetime", "dtype-date"] }
polars-core = "0.36.2"
polars-io = "0.36.2"
rand = "0.8.5"
rustfmt = "0.10.0"
glob = "0.3.1"
